# node-rdkit

./: .gitignore  CMakeLists.txt  README.md  index.js  package-lock.json  package.json
cmake/Modules/: FindRDKit.cmake
src/: addon.cc
tests/: runAddon.js
